--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -187,13 +187,17 @@ where $h,k,l,m,n\ge0$ (this can possibly be done in many different ways). By the
  \vlsbr[(
  \vlder{\Phi_2}{}{\delta}{\xi\{a_1^{\epsilon_1}\}\cdots\{a_h^{\epsilon_h}\}}
  \;\;.\;\;
- \zeta\{\fff\}\cdots\{\fff\}).\ttt]
+ \zeta\{\fff\}\cdots\{\fff\})
+ \;\;.\;\;
+ \ttt]
 }
 {
  \vlsbr[(\xi\{\ttt\}\cdots\{\ttt\}
  \;\;.\;\;
  \vlder{\Phi_1}{}{\zeta\{a_1^{\epsilon_1}\}\cdots\{a_h^{\epsilon_h}\}}{\gamma}
- ).\ttt]
+ )
+ \;\;.\;\;
+ \ttt]
 }
 \quad,
 \]
