Imported (and slightly altered) the definition of formulae from AFI

--- a/propositional_classical.tex
+++ b/propositional_classical.tex
@@ -6,6 +6,17 @@
 
 \newcommand{\fff}{\mathsf f}
 \newcommand{\ttt}{\mathsf t}
+%---------------------------------------
+\begin{definition}
+\emph{Formulae}, $\alpha$, $\beta$, $\gamma$, $\delta$ are freely built from: \emph{units}, $\fff$ (false), $\ttt$ (true); \emph{atoms}, $a$, $b$, $c$, $d$, $e$; \emph{disjunction} and \emph{conjunction}, ${\vlsbr[\alpha.\beta]}$ and $\vlsbr(\alpha.\beta)$. On the set of atoms a (non-identical) involution $\bar\cdot$ is defined, and dual atom occurrences, as $a$ and $\bar a$, can appear in formulae. We denote \emph{contexts}, \emph{i.e.}, formulae with a hole, by $\xi\vlhole$ and $\zeta\vlhole$.
+\end{definition}
+
+%---------------------------------------
+\begin{remark}
+Negation is only defined for atoms, which is not a limitation thanks to De Morgan laws.
+\end{remark}
+
+
 \newcommand{\ai   }{\mathsf{ai}}
 \newcommand{\aw   }{\mathsf{aw}}
 \newcommand{\ac   }{\mathsf{ac}}
