--- a/propositional_classical.tex
+++ b/propositional_classical.tex
@@ -82,6 +82,96 @@ If there exists a derivation $\vlder{}{\{\coor,\coand,\asor,\asand,\unor,\unand,
 When $\vlder{}{\{\coor,\coand,\asor,\asand,\unor,\unand,\idor,\idand\}}{\beta}{\alpha}$, we say that $\alpha=\beta$ and we often write $\vlinf{=}{}{\beta}{\alpha}$ instead of the derivation. Using this shorthand only compresses derivations by a polynomial, so it does not affect any complexity results.
 \end{remark}
 
+\begin{lemma}\label{LemSuperSwitch}
+Given a context $\xi\vlhole$ and a formula $\alpha$ there exist derivations $\vlder{}{\{\swi\}}{\xi\{\alpha\}}{\vls(\alpha.\xi\{\ttt\})}$ and $\vlder{}{\{\swi\}}{\vls[\xi\{\fff\}.\alpha]}{\xi\{\alpha\}}$.
+\end{lemma}
+
+\begin{proof}
+We show how to construct the first derivation, the second one can be done symmetrically. We argue by induction on the number of atoms in $\xi\vlhole$. The base case, $\xi\vlhole=\vlhole$, is trivial and the inductive cases are:
+
+\[
+\vlderivation
+{
+ \vlin{=}{}{\xi\{\alpha\}}
+ {
+  \vlin{\swi}{}{\vlsbr[\vlder{\Psi}{\{\swi\}}{\xi'\{\alpha\}}{\vls(\alpha.\xi'\{\ttt\})}\;\;.\;\;\beta]}
+  {
+   \vlin{=}{}{\vls(\alpha.[\xi'\{\ttt\}.\beta])}
+   {
+    \vlhy{\vls(\alpha.\xi\{\ttt\})}
+   }
+  }
+ }
+}\qquad\mbox{and}\qquad
+\vlderivation
+{
+ \vlin{=}{}{\xi\{\alpha\}}
+ {
+  \vlin{=}{}{\vlsbr(\vlder{\Psi'}{\{\swi\}}{\xi'\{\alpha\}}{\vls(\alpha.\xi'\{\ttt\})}\;\;.\;\;\beta)}
+  {
+   \vlhy{\vls(\alpha.\xi\{\ttt\})}
+  }
+ }
+}\quad,
+\]
+for some $\xi'\vlhole$ and $\beta$ where $\beta$ is not a unit and $\Psi$ and $\Psi'$ exist by the inductive hypothesis.
+\end{proof}
+
+%TODO: introduce notation for super switch
+
+\begin{lemma}\label{LemGenericContraction}
+Given a formula $\alpha$ and a positive integer $n$, there exist derivations $\vlupsmash{\vlder{}{\{\acd,\med\}}{\alpha}{\bigvee_{i=1}^{n}\alpha}}$ and $\vlupsmash{\vlder{}{\{\acu,\med\}}{\bigwedge_{i=1}^{n}\alpha}{\alpha}}$.
+\end{lemma}
+
+\begin{proof}
+We show how to construct the first derivation, the second one can be done symmetrically. We argue by induction on $n$. The first base case, $n=1$, is trivial and for the second base case, $n=2$, we argue by induction on the number of atom occurrences in $\alpha$. We have to consider the following base case and two inductive cases:
+\[
+\vlinf{\acd}{}{a}{\vls[a.a]}
+\qquad\hbox{,}\qquad
+\vlderivation
+{
+ \vlin{=}{}{\vls(\alpha.\beta)}
+ {
+  \vlin{\med}{}{\vlsbr(\vlder{}{\{\acd,\med\}}{\alpha}{\vls[\alpha.\alpha]}\;\;.\;\;\vlder{}{\{\acd,\med\}}{\beta}{\vls[\beta.\beta]})}
+  {
+   \vlhy{\vls[(\alpha.\beta).(\alpha.\beta)]}
+  }
+ }
+}\qquad\hbox{and}\qquad
+\vlderivation
+{
+ \vlin{=}{}{\vls[\alpha.\beta]}
+ {
+  \vlin{=}{}{\vlsbr[\vlder{}{\{\acd,\med\}}{\alpha}{\vls[\alpha.\alpha]}\;\;.\;\;\vlder{}{\{\acd,\med\}}{\beta}{\vls[\beta.\beta]}]}
+  {
+   \vlhy{\vls[[\alpha.\beta].[\alpha.\beta]]}
+  }
+ }
+}\quad.
+\]
+Finally, we show the inductive case, $n>2$:
+\[
+\vlderivation
+{
+ \vlde{}{\{\acd,\med\}}{\alpha}
+ {
+  \vlin{=}{}{\vlsbr[\vlder{}{\{\acd,\med\}}{\alpha}{\bigvee_{i=1}^{n-\lfloor n/2\rfloor}\alpha}\;\;.\;\;\vlder{}{\{\acd,\med\}}{\alpha}{\bigvee_{i=1}^{\lfloor n/2\rfloor}\alpha}]}
+  {
+   \vlhy{\bigvee_{i=1}^{n}\alpha}
+  }
+ }
+}\quad.
+\]
+\end{proof}
+
+\newcommand{\contr}{\mathsf{c}}
+\newcommand{\cod}{{\contr{\downarrow}}}
+\newcommand{\cou}{{\contr{\uparrow}}}
+
+\begin{remark}\label{RemGenericContraction}
+In the non-atomic version of system $\SKS$ the derivations shown in Lemma~\ref{LemGenericContraction} correspond to repeated applications of (co)contractions. For this reason we sometimes write the inference rules $\vlinf{n\cdot\cod}{}{\alpha}{\bigvee_{i=1}^{n}\alpha}$ and $\vlinf{n\cdot\cou}{}{\bigwedge_{i=1}^{n}\alpha}{\alpha}$ instead of the derivations $\vlder{}{\{\acd,\med\}}{\alpha}{\bigvee_{i=1}^{n}\alpha}$ and $\vlupsmash{\vlder{}{\{\acu,\med\}}{\bigwedge_{i=1}^{n}\alpha}{\alpha}}$, respectively.
+\end{remark}
+
 \section{A System with Implication}
 
 \newcommand{\inte}{\mathsf{i}}
