--- a/local_transformations.tex
+++ b/local_transformations.tex
@@ -1,6 +1,560 @@
 \chapter{Local Transformations}
 
+\begin{definition}
+In Figure~\ref{FigRed}, we define graphical expressions of the kind $r\colon A\to B$, where $r$ is a name and $A$ and $B$ are flows.
+\end{definition}
+
+\newcommand{\rwdcd}{{{\mathsf w}{\downarrow}{\hbox{-}}{\mathsf c}{\downarrow}}}
+\newcommand{\rwdiu}{{{\mathsf w}{\downarrow}{\hbox{-}}{\mathsf i}{\uparrow  }}}
+\newcommand{\rwdwu}{{{\mathsf w}{\downarrow}{\hbox{-}}{\mathsf w}{\uparrow  }}}
+\newcommand{\rwdcu}{{{\mathsf w}{\downarrow}{\hbox{-}}{\mathsf c}{\uparrow  }}}
+\newcommand{\rcuwu}{{{\mathsf c}{\uparrow  }{\hbox{-}}{\mathsf w}{\uparrow  }}}
+\newcommand{\rcdwu}{{{\mathsf c}{\downarrow}{\hbox{-}}{\mathsf w}{\uparrow  }}}
+\newcommand{\rcdiu}{{{\mathsf c}{\downarrow}{\hbox{-}}{\mathsf i}{\uparrow  }}}
+\newcommand{\rcdcu}{{{\mathsf c}{\downarrow}{\hbox{-}}{\mathsf c}{\uparrow  }}}
+\newcommand{\ridwu}{{{\mathsf i}{\downarrow}{\hbox{-}}{\mathsf w}{\uparrow  }}}
+\newcommand{\ridcu}{{{\mathsf i}{\downarrow}{\hbox{-}}{\mathsf c}{\uparrow  }}}
+%---------------------------------------
+\begin{figure}[tbp]
+\[
+\begin{array}{@{}c@{}c@{}}
+%-------------------
+\rwdcd\colon\quad\afraise{\atomicflow{
+( 0  ,0)*{\afacd{}{}{}\one{}\two};
+(-2  ,4)*{\afawdnw{}{}};
+(-3.5,0)*{\invisiblemark};
+( 3.5,0)*{\invisiblemark}}}
+\quad\to\quad
+\atomicflow{
+( 0  ,3.3)*{\aflabelright{\one,\two}};
+( 0  ,3  )*{\afvj6};
+(-1.5,0  )*{\invisiblemark};
+( 3  ,0  )*{\invisiblemark}}
+&\qquad
+%-------------------
+\rcuwu\colon\quad\aflower{\atomicflowinv{
+( 0  ,0)*{\afacu{}{}{}\two{}\one};
+(-2  ,6)*{\afawunw{}{}};
+( 3.5,0)*{\invisiblemark}}}
+\quad\to\quad
+\atomicflow{
+(0,3  )*{\afvj6};
+(0,3.3)*{\aflabelright{\one,\two}};
+(3,0  )*{\invisiblemark}}
+\\
+%-------------------
+\rwdiu\colon\quad\atomicflow{
+( 0  ,0)*{\afaiu{}{}{}\one{}{}};
+(-2  ,4)*{\afawdnw{}{}};
+(-3.5,0)*{\invisiblemark};
+( 3.5,0)*{\invisiblemark}}
+\quad\to\quad
+\aflower{\atomicflow{
+( 0  ,0)*{\afawu{}{}{}\one};
+(-1.5,0)*{\invisiblemark};
+( 1.5,0)*{\invisiblemark}}}
+&\qquad
+%-------------------
+\ridwu\colon\quad\atomicflowinv{
+( 0  ,0)*{\afaid{}{}{}\one{}{}};
+(-2  ,6)*{\afawunw{}{}};
+( 3.5,0)*{\invisiblemark}}
+\quad\to\quad
+\afraise{\atomicflowinv{
+(0  ,0)*{\afawd{}{}{}\one};
+(1.5,0)*{\invisiblemark}}}
+\\
+%-------------------
+\multispan2{\hfil$
+\rwdwu\colon\quad\atomicflow{
+( 0  ,6)*{\afawd{}{}{}{}};
+( 0  ,0)*{\afawunw{}{}{}{}};
+(-1.5,0)*{\invisiblemark};
+( 1.5,0)*{\invisiblemark}}
+\quad\to\quad
+\atomicflow{}
+$\hfil}\\
+%-------------------
+\rwdcu\colon\quad\afraise{\atomicflow{
+( 0  ,-4)*{\afacu\one{}{}\two{}{}};
+( 0  , 0)*{\afawdnw{}{}};
+(-3.5, 0)*{\invisiblemark};
+( 3.5, 0)*{\invisiblemark}}}
+\quad\to\quad
+\atomicflow{
+(-2  ,-4)*{\afawd{}{}\one{}};
+( 2  ,-4)*{\afawd{}{}{}\two};
+(-3.5, 0)*{\invisiblemark};
+( 3.5, 0)*{\invisiblemark}}
+&\qquad
+%-------------------
+\rcdwu\colon\quad\aflower{\atomicflowinv{
+( 0  ,-4)*{\afacd\one{}{}\two{}{}};
+( 0  , 2)*{\afawunw{}{}};
+(-3.5, 0)*{\invisiblemark};
+( 3.5, 0)*{\invisiblemark}}}
+\quad\to\quad
+\atomicflowinv{
+(-2  ,-4)*{\afawu{}{}\one{}};
+( 2  ,-4)*{\afawu{}{}{}\two};
+(-3.5, 0)*{\invisiblemark};
+( 3.5, 0)*{\invisiblemark}}
+\\
+%-------------------
+\rcdiu\colon\quad\aflower{\atomicflow{
+(   6, 6)*{\afvjd4{}\three{}{}};
+(   3, 0)*{\afaiuex{}{}{}{}{}{}32};
+(   0, 4)*{\afacdnw\one{}{}\two};
+(-3.5, 0)*{\invisiblemark};
+( 7.5, 0)*{\invisiblemark}}}
+\quad\to\quad
+\aflower{\atomicflow{
+(  10,8)*{\afacu{}{}{}{}{}\three};
+(   0,8)*{\afvjd8\one{}};
+(   4,8)*{\afvjd8{}\two};
+(   6,2)*{\afaiunw{}{}};
+(   6,0)*{\afaiuex{}{}{}{}{}{}31}}}
+&\qquad
+%-------------------
+\ridcu\colon\quad\afraise{\atomicflowinv{
+(   6,6)*{\afvju4{}\three{}{}};
+(   3,0)*{\afaidex {}{}{}{}{}{}32};
+(   0,6)*{\afacunw\one{}{}\two};
+(-3.5,0)*{\invisiblemark};
+( 7.5,0)*{\invisiblemark}}}
+\quad\to\quad
+\afraise{\atomicflowinv{
+(  10,8)*{\afacd{}{}{}{}{}\three};
+(   0,8)*{\afvju8\one{}};
+(   4,8)*{\afvju8{}\two};
+(   6,4)*{\afaidnw{}{}};
+(   6,0)*{\afaidex{}{}{}{}{}{}31}}}
+\\
+%-------------------
+\multispan2{\hfil$
+\rcdcu\colon\quad\atomicflow{
+( 0,6)*{\afacd\one{}{}\two{}{}};
+( 0,0)*{\afacunw\three{}{}\four};
+(-4,0)*{\invisiblemark};
+( 4,0)*{\invisiblemark}}
+\quad\to\quad
+\atomicflow{
+(0,12)*{\afacu{}{}{}{}\one{}};
+(6,12)*{\afacu{}{}{}{}{}\two};
+( 0,0)*{\afacd{}{}{}{}\three{}};
+( 6,0)*{\afacd{}{}{}{}{}\four};
+(-2,6)*{\afvj4};
+( 8,6)*{\afvj4};
+( 3,6)*{\afex24}}
+$\hfil}\\
+\end{array}
+\]
+\caption{Atomic-flow reduction rules.}
+\label{FigRed}
+\end{figure}%
+
+%---------------------------------------
+\begin{example}
+The `reduction' on the left, when used inside a larger atomic flow, might create a situation as on the right:
+\nopagebreak[4]\medskip\afnegspace
+\[
+\atomicflow{
+( 0  ,0)*{\afacu{}{}{}{}{}{}};
+( 0  ,4)*{\afawdnw{}{}}}
+\quad\to\quad
+\atomicflow{
+( 0  ,0)*{\afaid{}{}{}{}{}{}}}
+\qquad\qquad
+\atomicflow{
+( 0  , 8)*{\afacu{}{}{}{}\ppl{}};
+( 0  ,12)*{\afawdnw{}{}};
+(-2  , 4)*{\aflabelleft\ppl};
+( 2  , 4)*{\aflabelright\ppl};
+( 0  , 0)*{\afacd{}{}{}{}\ppl{}};
+(-3.5, 0)*{\invisiblemark};
+( 3.5, 0)*{\invisiblemark}}
+\quad\to\quad
+\atomicflow{
+( 0  ,4)*{\afaidnw{}{}};
+( 0  ,0)*{\afacd\ppl{}{}{\scriptstyle?}\ppl{}};
+(-3.5,0)*{\invisiblemark};
+( 3.5,0)*{\invisiblemark}}
+\quad,
+\] 
+where the graph at the right is not an atomic flow, for lack of a polarity assignment.
+\end{example}
+
+This prompts us to define reduction rules and reductions for atomic flows as follows.
+
+%---------------------------------------
+\begin{definition}
+An (\emph{atomic-flow}) \emph{reduction rule $r$ from flow $A$ to flow $B$} is a quadruple $(A,B,f,g)$ such that:
+\begin{enumerate}
+\item $f$ is a one-to-one map from the upper edges of $A$ to the upper edges of $B$,
+\item $g$ is a one-to-one map from the lower edges of $A$ to the lower edges of $B$,
+\item for every polarity assignment $\pi$ for $A$, there is a polarity assignment $\pi'$ for $B$ such that $\pi'(f(\epsilon))=\pi(\epsilon)$ and $\pi'(g(\epsilon'))=\pi(\epsilon')$, for any upper edge $\epsilon$ and any lower edge $\epsilon'$ of $A$;
+\end{enumerate}
+we define reduction rules with graphical expressions $r\colon A\to B$, where $f$ and $g$ are indicated by labelling edges. A binary relation $R$ on the set of atomic flows is called an (\emph{atomic-flow}) \emph{reduction} if, whenever $C\mathrel{R}D$, there is a one-to-one map from the upper edges of $C$ to the upper edges of $D$ and a one-to-one map from the lower edges of $C$ to the lower edges of $D$. For every reduction rule $r\colon A\to B$, the reduction ${\to_r}$ is defined, such that $C\to_r D$ if and only if $A$ appears as a subgraph in $C$ and we obtain $D$ by replacing $A$ with $B$ in $C$, while respecting the correspondence of edges; we call this operation a \emph{reduction by $r$}.
+\end{definition}
+
+\begin{remark}
+The condition on polarity assignments for a reduction rule $r$ guarantees that the $D$ in $C\to_r D$ is a proper atomic flow, if $C$ is one.
+\end{remark}
+
+\begin{remark}
+Because of the condition on polarity assignments for reduction rules, two distinct connected components in a flow cannot be connected by a reduction. To see that this is impossible, consider the following `reduction rule', which violates the condition on polarity assignments:
+\[
+\aflower{\atomicflow{
+(-2,0)*{\afawu{}{}{}{}};
+( 2,0)*{\afawu{}{}{}{}}}}
+\quad\to\quad
+\aflower{\atomicflow{
+( 0  , 2)*{\afaiu{}{}{}{}{}{}}}}
+\quad.
+\]
+\afnegspace
+For this `reduction rule' there exist both valid (left) and invalid (right) polarity assignments:
+\[
+\aflower{\atomicflow{
+(-2  ,0)*{\afawu{}{}\ppl{}};
+( 2  ,0)*{\afawu{}{}{}\pmi};
+(-3.5,0)*{\invisiblemark};
+( 3.5,0)*{\invisiblemark}}}
+\quad\to\quad
+\aflower{\atomicflow{
+( 0  ,2)*{\afaiu\ppl{}{}\pmi{}{}};
+(-3.5,0)*{\invisiblemark};
+( 3.5,0)*{\invisiblemark}}}
+\qquad\qquad
+\aflower{\atomicflow{
+(-2,0)*{\afawu{}{}\ppl{}};
+( 2,0)*{\afawu{}{}{}\ppl};
+(-3.5,0)*{\invisiblemark};
+( 3.5,0)*{\invisiblemark}}}
+\quad\to\quad
+\aflower{\atomicflow{
+( 0  , 2)*{\afaiu\ppl{}{}{\scriptstyle?}{}{}};
+(-3.5, 0)*{\invisiblemark};
+( 3.5, 0)*{\invisiblemark}}}
+\quad.
+\]
+\afnegspace
+\end{remark}
+
+It is immediate to check:
+
+\begin{proposition}
+The graphical expressions in Figure~\ref{FigRed} are atomic-flow reduction rules.
+\end{proposition}
+
+%---------------------------------------
+\begin{definition}
+A finite set of reduction rules is a \emph{flow rewriting system}. For every flow rewriting system $F=\{r_1,\dots,r_h\}$ we define ${\to_F}={\to_{r_1}\cup\cdots\cup{\to_{r_h}}}$. The reflexive transitive closure of $\to_F$ is denoted by $\to_F^\star$. Given a set of atomic flows $S$, we say that a flow rewriting system $F$ is \emph{terminating on $S$} if there is no infinite chain $A_1\to_F A_2\to_F\cdots$, for every $A_1\in S$; if $F$ is terminating on the set of atomic flows, we say that it is \emph{terminating}. We say that atomic flow $A$ is \emph{normal} for flow rewriting system $F$ if there is no atomic flow $B$ such that $A\to_F B$.
+\end{definition}
+
+\newcommand{\frw}{{\mathsf w}}
+%---------------------------------------
+\begin{definition}
+The following flow rewriting system is called $\frw$:
+\[
+\{\;\rwdcd\;,\;\rcuwu\;,\;\rwdiu\;,\;\ridwu\;,\;\rwdwu\;,\;\rwdcu\;,\;\rcdwu\;\}
+\quad.
+\]
+\end{definition}
+
+\newcommand{\frc}{{\mathsf c}}
+%---------------------------------------
+\begin{definition}
+The following flow rewriting system is called $\frc$:
+\[
+\{\;\rcdiu\;,\;\ridcu\;,\;\rcdcu\;\}\quad.
+\]
+\end{definition}
+
 \section{Soundness}
 
+%---------------------------------------
+\begin{definition}
+A reduction $R$ is \emph{sound} if, for every $A$ and $B$ such that $A\mathrel{R}B$ and for every derivation $\Phi$ with atomic flow $A$, there is a derivation $\Psi$ with atomic flow $B$ such that $\Phi$ and $\Psi$ have the same premiss and conclusion; in this case we write $\Phi\mathrel{R}\Psi$. A reduction rule $r$ is \emph{sound} if $\to_r$ is sound.
+\end{definition}
+
+The proof of the following theorem is essentially contained in Figures~\ref{FigRedW} and \ref{FigRedC}.
+
+%---------------------------------------
+\begin{figure}[tbp]
+\[
+\begin{array}{@{}l@{}c@{}}
+%---------------------------------------
+\rwdcd\colon\hfil\afraise{\atomicflow{
+( 0  ,0)*{\afacd\three{}{}\one{}\two};
+(-2  ,4)*{\afawdnw{}{}};
+(-3.5,0)*{\invisiblemark};
+( 3.5,0)*{\invisiblemark}}}
+\quad\to\quad
+\atomicflow{
+( 0  ,3.3)*{\aflabelright{\one,\two}};
+( 0  ,3  )*{\afvj6};
+(-1.5,0  )*{\invisiblemark};
+( 3  ,0  )*{\invisiblemark}}
+&\qquad
+\vlderivation                                 {
+\vlin{\acd}{}{\zeta\{a^\two\}             }  {
+\vlde{\Phi}{}{\zeta\vlscn[a^\three.a^\one]} {
+\vlin{\awd}{}{\xi\{a^\three\}             }{
+\vlhy        {\xi\{\fff\}                 }}}}}
+\quad\to_\rwdcd\quad
+\vlderivation                                                      {
+\vlin{=                      }{}{\zeta\{a^{\one,\two}\}         } {
+\vlde{\Phi\{a^\three\ot\fff\}}{}{\zeta\vlscn[\fff.a^{\one,\two}]}{
+\vlhy                           {\xi\{\fff\}                    }}}}
+\\
+\noalign{\bigskip}
+%---------------------------------------
+\rwdiu\colon\hfil\atomicflow{
+( 0  ,0)*{\afaiu\two {}{}\one{}{}};
+(-2  ,4)*{\afawdnw{}{}};
+(-3.5,0)*{\invisiblemark};
+( 3.5,0)*{\invisiblemark}}
+\quad\to\quad
+\aflower{\atomicflow{
+( 0  ,0)*{\afawu{}{}{}\one};
+(-1.5,0)*{\invisiblemark};
+( 1.5,0)*{\invisiblemark}}}
+&\qquad
+\vlderivation                                    {
+\vlin{\aiu}{}{\zeta\{\fff\}                  }  {
+\vlde{\Phi}{}{\zeta\vlscn(a^\two.\bar a^\one)} {
+\vlin{\awd}{}{\xi\{a^\two\}                  }{
+\vlhy        {\xi\{\fff\}                    }}}}}
+\quad\to_\rwdiu\quad
+\vlderivation                                                   {
+\vlin{=                    }{}{\zeta\{\fff\}                }  {
+\vlin{\awu                 }{}{\zeta\vlscn(\fff.\ttt)       } {
+\vlde{\Phi\{a^\two\ot\fff\}}{}{\zeta\vlscn(\fff.\bar a^\one)}{
+\vlhy                         {\xi\{\fff\}                  }}}}}
+\\
+\noalign{\bigskip}
+%---------------------------------------
+\rwdwu\colon\hfil\atomicflow{
+( 0  ,6)*{\afawd{}{}{}\one};
+( 0  ,0)*{\afawunw{}{}{}{}};
+(-1.5,0)*{\invisiblemark};
+( 1.5,0)*{\invisiblemark}}
+\quad\to\quad
+\atomicflow{}
+&\qquad
+\vlderivation                    {
+\vlin{\awu}{}{\zeta\{\ttt  \}}  {
+\vlde{\Phi}{}{\zeta\{a^\one\}} {
+\vlin{\awd}{}{\xi\{a^\one\}  }{
+\vlhy        {\xi\{\fff  \}  }}}}}
+\quad\to_\rwdwu\quad
+\vlderivation                                                    {
+\vlin{=                    }{}{\zeta\{\ttt\}                }   {
+\vlin{\swi                 }{}{\zeta\vlscn[(\fff.\fff).\ttt]}  {
+\vlin{=                    }{}{\zeta\vlscn(\fff.[\fff.\ttt])} {
+\vlde{\Phi\{a^\one\ot\fff\}}{}{\zeta\{\fff\}                }{
+\vlhy                         {\xi\{\fff\}                  }}}}}}
+\\
+\noalign{\bigskip}
+%---------------------------------------
+\rwdcu\colon\hfil\afraise{\atomicflow{
+( 0  ,-4)*{\afacu\one{}{}\two{}\three};
+( 0  , 0)*{\afawdnw{}{}};
+(-3.5, 0)*{\invisiblemark};
+( 3.5, 0)*{\invisiblemark}}}
+\quad\to\quad
+\atomicflow{
+(-2  ,-4)*{\afawd{}{}\one{}};
+( 2  ,-4)*{\afawd{}{}{}\two};
+(-3.5, 0)*{\invisiblemark};
+( 3.5, 0)*{\invisiblemark}}
+&\qquad
+\vlderivation                               {
+\vlin{\acu}{}{\zeta\vlscn(a^\one.a^\two)}  {
+\vlde{\Phi}{}{\zeta\{a^\three\}         } {
+\vlin{\awd}{}{\xi\{a^\three\}           }{
+\vlhy        {\xi\{\fff\}               }}}}}
+\quad\to_\rwdcu\quad
+\vlderivation                                                   {
+\vlin{\awd                   }{}{\zeta\vlscn(a^\one.a^\two)}   {
+\vlin{\awd                   }{}{\zeta\vlscn(a^\one.\fff)  }  {
+\vlin{=                      }{}{\zeta\vlscn(\fff.\fff)    } {
+\vlde{\Phi\{a^\three\ot\fff\}}{}{\zeta\{\fff\}             }{
+\vlhy                           {\xi\{\fff\}               }}}}}}
+\\
+%---------------------------------------
+\end{array}
+\]
+\caption{`Downwards' reduction rules for weakening and their soundness.}
+\label{FigRedW}
+\end{figure}%
+
+%---------------------------------------
+\begin{figure}[tbp]
+\[
+\begin{array}{@{}l@{}c@{}}
+%---------------------------------------
+\rcdiu\colon\aflower{\atomicflow{
+(   6, 6)*{\afvjd4{}\three{}{}};
+(   3, 0)*{\afaiuex{}\four{}{}{}{}32};
+(   0, 4)*{\afacdnw\one{}{}\two};
+(-3.5, 0)*{\invisiblemark};
+( 7.5, 0)*{\invisiblemark}}}
+\quad\to\quad
+\aflower{\atomicflow{
+(10,8)*{\afacu{}{}{}{}{}\three};
+( 0,8)*{\afvjd8\one{}};
+( 4,8)*{\afvjd8{}\two};
+( 6,2)*{\afaiunw{}{}};
+( 6,0)*{\afaiuex{}{}{}{}{}{}31}}}
+&\qquad
+\vlderivation                                       {
+\vlin{\aiu}{}{\zeta\{\fff\}                     }  {
+\vlde{\Phi}{}{\zeta\vlscn(a^\four.\bar a^\three)} {
+\vlin{\acd}{}{\xi\{a^\four\}                    }{
+\vlhy        {\xi\vlscn[a^\one.a^\two]          }}}}}
+\quad\to_\rcdiu\quad
+\vlderivation                                                     {
+\vlin{\aiu}{}{\zeta\{\fff\}                               }      {
+\vlin{=   }{}{\zeta\vlscn(a^\one.\bar a)                  }     {
+\vlin{\aiu}{}{\zeta\vlscn([\fff.a^\one].\bar a)           }    {
+\vlin{\swi}{}{\zeta\vlscn([(\bar a.a^\two).a^\one].\bar a)}   {
+\vlin{=   }{}{\zeta\vlscn((\bar a.[a^\two.a^\one]).\bar a)}  {
+\vlin{\acu}{}{\zeta\vlscn([a^\one.a^\two].(\bar a.\bar a))} {
+\vlde{\Phi\{a^\four\ot\vls[a.a]\}}
+           {}{\zeta\vlscn([a^\one.a^\two].\bar a^\three)  }{
+\vlhy        {\xi\vlscn[a^\one.a^\two]                    }}}}}}}}}
+\\
+\noalign{\bigskip}
+%---------------------------------------
+\rcdcu\colon\hfil\atomicflow{
+( 0,6)*{\afacd\one{}{}\two{}\five};
+( 0,0)*{\afacunw\three{}{}\four};
+(-4,0)*{\invisiblemark};
+( 4,0)*{\invisiblemark}}
+\quad\to\quad
+\atomicflow{
+( 0,12)*{\afacu{}{}{}{}\one{}};
+( 6,12)*{\afacu{}{}{}{}{}\two};
+( 0, 0)*{\afacd{}{}{}{}\three{}};
+( 6, 0)*{\afacd{}{}{}{}{}\four};
+(-2, 6)*{\afvj4};
+( 8, 6)*{\afvj4};
+( 3, 6)*{\afex24}}
+&\qquad
+\vlderivation                                  {
+\vlin{\acu}{}{\zeta\vlscn(a^\three.a^\four)}  {
+\vlde{\Phi}{}{\zeta\{a^\five\}             } {
+\vlin{\acd}{}{\xi\{a^\five\}               }{
+\vlhy        {\xi\vlscn[a^\one.a^\two]     }}}}}
+\quad\to_\rcdcu\quad
+\vlderivation                                                            {
+\vlin{\acd                       }{}{\zeta\vlscn(a^\three.a^\four)}     {
+\vlin{\acd                       }{}{\zeta\vlscn(a^\three.[a.a])  }    {
+\vlin{\med                       }{}{\zeta\vlscn([a.a].[a.a])     }   {
+\vlin{\acu                       }{}{\zeta\vlscn[(a.a).(a.a)]     }  {
+\vlin{\acu                       }{}{\zeta\vlscn[a^\one.(a.a)]    } {
+\vlde{\Phi\{a^\five\ot\vls[a.a]\}}{}{\zeta\vlscn[a^\one.a^\two]   }{
+\vlhy                               {\xi\vlscn[a^\one.a^\two]     }}}}}}}}
+\\
+%---------------------------------------
+\end{array}
+\]
+\caption{`Downwards' reduction rules for contraction and their soundness.}
+\label{FigRedC}
+\end{figure}%
+
+%---------------------------------------
+\begin{theorem}\label{TheoSound}
+The reduction rules\/ $\rwdcd$, $\rwdiu$, $\rwdwu $, $\rwdcu$, $\rcdiu$, $\rcdcu$, $\rcuwu$, $\ridwu$, $\rcdwu$ and\/ $\ridcu$ are sound.
+\end{theorem}
+
+\begin{proof}
+For $r\in\{\rwdcd,\rwdiu,\rwdwu,\rwdcu,\rcdiu,\rcdcu\}$ and $r\colon A\to B$ as in the left columns of Figures~\ref{FigRedW} and \ref{FigRedC}, for every $C$ and $D$ such that $C\to_r D$ and for every $\Psi$ with flow $C$, the right columns of the tables provide reductions $\Psi\to_r\Psi'$, where $\Psi'$ has flow $D$, as follows. If $\Phi'\to_r\Phi''$ is the reduction provided by the table, then
+\[
+\Psi=
+\vlderivation              {
+\vlde{\Psi_2}{}{\beta  }  {
+\vlde{\Phi' }{}{\beta' } {
+\vlde{\Psi_1}{}{\alpha'}{
+\vlhy          {\alpha }}}}}
+\qquad\hbox{and}\qquad
+\Psi'=
+\vlderivation              {
+\vlde{\Psi_2}{}{\beta  }  {
+\vlde{\Phi''}{}{\beta' } {
+\vlde{\Psi_1}{}{\alpha'}{
+\vlhy          {\alpha }}}}}
+\quad.
+\]
+We can deal with the remaining rules by employing dual derivations to the ones shown.
+\end{proof}
+
+%---------------------------------------
+\begin{remark}\label{RemIndep}
+The previous soundness theorem only depends on the switch and medial rules for the reductions in Figure~\ref{FigRedC}. Any system obtained from $\SKS$ by replacing $\swi$ and $\med$ with linear rules that can derive them would support a soundness theorem like the one above, for the same reduction rules. For example, we could think of replacing $\swi$ with the rule $\vlinf{\swi'}{}{\vls[(a.c).[b.d]]}{\vls([a.b].[c.d])}$, from which $\swi$ is derivable.
+\end{remark}
+
+
+\section{Non-termination}
+
+%---------------------------------------
+\begin{remark}\label{RemCycle}
+Flow rewriting system $\frc$ is not terminating:
+\nopagebreak[4]\medskip\afnegspace
+\[
+\atomicflow{
+( 4  ,8)*{\afaidnw{}{}};
+( 6  ,6)*{\afvj4};
+( 3  ,0)*{\afaiuex{\ppl}{}{}{\pmi}{}{}32};
+( 0  ,4)*{\afacd{\ppl}{}{}{}{}{}};
+(-3.5,0)*{\invisiblemark};
+( 7.5,0)*{\invisiblemark}}
+\quad\to_\frc\quad
+\atomicflow{
+( 9  ,12)*{\afaidex{\pmi}{}{}{\ppl}{}{}32};
+( 6  , 8)*{\afacu{}{}{}{}{}{}};
+(12  , 6)*{\afvj4};
+( 0  , 6)*{\afvjd4\ppl{}};
+( 2  , 2)*{\afaiunw{}{}};
+(10  , 2)*{\afaiunw{}{}{}{}{}{}};
+(-1.5, 0)*{\invisiblemark};
+(13.5, 0)*{\invisiblemark}}
+\quad\to_\frc\quad
+\atomicflow{
+( 6  ,8)*{\afaidnw{}{}};
+(14  ,8)*{\afaidnw{}{}};
+( 4  ,6)*{\afvj4};
+(16  ,6)*{\afvj4};
+( 2  ,0)*{\afaiu{\ppl}{}{}{}{}{}};
+(13  ,0)*{\afaiuex{\ppl}{}{}{\pmi}{}{}32};
+(10  ,4)*{\afacd{}{}{}{}{}{}};
+(-1.5,0)*{\invisiblemark};
+(17.5,0)*{\invisiblemark}}
+\quad\to_\frc\quad\cdots\quad.
+\]
+\afnegspace
+We see that if a contraction vertex belongs to an $\ai$-cycle, reductions by $\frc$ make it `bounce' in the $\ai$-cycle and create a trail; while bouncing, the vertex alternates between contraction and cocontraction; if we assign a polarity to the flow, the vertex alternates between being positive and negative.
+\end{remark}
+
 \section{Termination and Confluence}
-\subsection{Non-termination}
+%---------------------------------------
+\begin{theorem}\label{TheoWTerm}
+Flow rewriting system\/ $\frw$ is terminating.
+\end{theorem}
+
+%---------------------------------------
+\begin{proof}
+At every reduction, either the number of vertices decreases, or it stays the same but the number of contraction and cocontraction vertices decreases.
+\end{proof}
+
+%---------------------------------------
+\begin{theorem}\label{TheoCTerm}
+Flow rewriting system\/ $\frc$ is terminating on the set of cycle-free atomic flows.
+\end{theorem}
+
+%---------------------------------------
+\begin{theorem}\label{TheoWCConf}
+Flow rewriting system\/ $\frw\cup\frc$ is confluent.
+\end{theorem}
