Added labels to equations in the definition of the map from derivations to atomic flows

--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -46,23 +46,23 @@ where the mapping is indicated by small numerals.
 \vlinf{\med}{}{\vls([\alpha.\gamma].[\beta.\delta])}
               {\vls[(\alpha.\beta).(\gamma.\delta)]}  \quad,      \\
 \noalign{\smallskip}
-\vlinf={}{\vls[\beta.\alpha]}{\vls[\alpha.\beta]}\quad,&\qquad
-\vlinf={}{\vls(\beta.\alpha)}{\vls(\alpha.\beta)}\quad,      \\
+\vlinf{\coor}{}{\vls[\beta.\alpha]}{\vls[\alpha.\beta]}\quad,&\qquad
+\vlinf{\coand}{}{\vls(\beta.\alpha)}{\vls(\alpha.\beta)}\quad,      \\
 \noalign{\smallskip}
-\vlinf={}{\vls[\alpha.[\beta.\gamma]]}
+\vlinf{\asor}{}{\vls[\alpha.[\beta.\gamma]]}
          {\vls[[\alpha.\beta].\gamma]}                \quad,&\qquad
-\vlinf={}{\vls[[\alpha.\beta].\gamma]}
+\vlinf{\asor}{}{\vls[[\alpha.\beta].\gamma]}
          {\vls[\alpha.[\beta.\gamma]]}                \quad,      \\
 \noalign{\smallskip}
-\vlinf={}{\vls(\alpha.(\beta.\gamma))}
+\vlinf{\asand}{}{\vls(\alpha.(\beta.\gamma))}
          {\vls((\alpha.\beta).\gamma)}                \quad,&\qquad
-\vlinf={}{\vls((\alpha.\beta).\gamma)}
+\vlinf{\asand}{}{\vls((\alpha.\beta).\gamma)}
          {\vls(\alpha.(\beta.\gamma))}                \quad,      \\
 \noalign{\smallskip}
-\vlinf={}{\{\alpha\}}{\vls[\alpha.\fff]}           \quad,\qquad
-\vlinf={}{\vls[\alpha.\fff]}{\{\alpha\}}           \quad,&\qquad
-\vlinf={}{\{\alpha\}}{\vls(\alpha.\ttt)}        \qquad\hbox{and\/}\qquad
-\vlinf={}{\vls(\alpha.\ttt)}{\{\alpha\}}
+\vlinf{\unor}{}{\alpha}{\vls[\alpha.\fff]}           \quad,\qquad
+\vlinf{\unor}{}{\vls[\alpha.\fff]}{\alpha}           \quad,&\qquad
+\vlinf{\unand}{}{\alpha}{\vls(\alpha.\ttt)}        \qquad\hbox{and\/}\qquad
+\vlinf{\unand}{}{\vls(\alpha.\ttt)}{\alpha}
 \end{array}
 \]
 all the atom occurrences in $\alpha$, $\beta$, $\gamma$ and $\delta$ in the premiss are respectively mapped to the same edges of $\phi$ as the atom occurrences in $\alpha$, $\beta$, $\gamma$ and $\delta$ in the conclusion.
