Changed names of parts and made introduction a chapter

--- a/thesis.tex
+++ b/thesis.tex
@@ -113,9 +113,8 @@
 }
 \newpage
 \pagenumbering{arabic}
-\part{Introduction}
 \input{introduction.tex}
-\part{Deep Inference}
+\part{Derivations}
 \input{formalism.tex}
 \input{propositional_classical.tex}
 \input{modal.tex}
